canary-deployment/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APP}-${ENV}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ${APP}
        env: ${ENV}
    spec:
      containers:
      - name: ${APP}
        image: ${IMAGE}:${IMAGE_TAG}
        ports:
        - containerPort: 80
        readinessProbe:
           tcpSocket:
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-${ENV}-service
spec:
  type: NodePort
  selector:
    app: ${APP}
    env: ${ENV}
  ports:
  - port: 80
    targetPort: 8080
