canary-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-lb
spec:
  type: LoadBalancer
  selector:
    app: ${APP}
  ports:
  - port: 80
